catchup/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: football
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: chelsea
  name: chelsea
  namespace: football
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chelsea
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chelsea
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
