catchup/liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-live
  name: pod-live
spec:
  containers:
  - image: nginx:1.14.2-alpine
    name: pod-live
    ports:
    - containerPort: 80
      name: live-port
    livenessProbe:
      httpGet:
        path: /
        port: live-port
      initialDelaySeconds: 5
      periodSeconds: 5
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
