catchup/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chelsea
  name: chelsea-svc
  namespace: football
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: chelsea
  type: ClusterIP
status:
  loadBalancer: {}
