catchup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: chelsea-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: football
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: chelsea-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
